<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.trace.ImageMenu">

    <Button
        android:id="@+id/bingImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bingImage"
        android:layout_below="@id/galleryImage"
        android:textSize="30sp" />

    <Button
        android:id="@+id/galleryImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galleryImage"
        android:layout_centerVertical="true"
        android:textSize="30sp" />

    <Button
        android:id="@+id/savedImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/galleryImage"
        android:text="@string/savedImage"
        android:textSize="30sp" />
</RelativeLayout>
